2006-01-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/scripting/LuaScriptingProvider.h: with CEGUI 0.4.0 LuaScriptingModule.h has been changed to CEGUILua.h

2006-01-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/Makefile.am|WidgetDefinitions.cpp: removed reference to GiveWidget.cpp and MaterialPicker, cleaned up obsolete code
	* src/components/ogre/scripting/bindings/lua/EmberOgre.pkg|lua_EmberOgre.cpp|requried.h: updated bindings
	* src/services/metaserver/MetaserverService.cpp: removed crashing code
	* src/components/ogre/GUIManager.cpp: cleaned up code

2006-01-10  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.conf: increase the frequency for server updates
	* configure.ac:
		* bump the version number
		* check for lua
		* added new build targets

2006-01-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/MathConverter.h: make most methods accept const references instead of just doing a copy, should bring some speed up
	* src/components/ogre/MotionManager.h: cosmetic code changes
	* src/components/ogre/MousePicker.h: added more code comments
	* src/components/ogre/TerrainGenerator.h: use getSingletonPtr instead of the deprecated getInstance
	* src/components/ogre/TerrainPage.cpp:
		* use getSingletonPtr instead of the deprecated getInstance
		* randomize the size of the grass tufts a bit

2006-01-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/GUICEGUIAdapter.*: added an input adapter for CEGUI. This will take care of routing input to the CEGUI system.
	* src/components/ogre/GUIManager.*:
		* use getSingletonPtr instead of the deprecated getInstance
		* integrate with the scripting system
		* register a new GUICEGUIAdapter instance with the input system
		* removed loading and references to obsolete C++ widgets since they've been replaced with lua versions
		* better handling of CEGUI errors
		* allow caps-lock to toggle movement mode, although it doesn't seem to catch all pressings